# zsh-highlighter

./: Cargo.toml  LICENSE  README.md  SPEC.md  prd.json  progress.txt
.github/workflows/: release.yml  test.yml
Formula/: zsh-highlighter.rb
plugin/: zsh-highlighter.zsh
scripts/ralph/: CLAUDE.md  ralph.sh
src/: classifier.rs  lib.rs  main.rs  tokenizer.rs
tests/: integration.rs
