[package]
name = "zsh-highlighter"
version = "0.0.1"
edition = "2021"
description = "Minimal, ultra-fast zsh syntax highlighter written in Rust"
license = "MIT"
repository = "https://github.com/EshginGuluzade/zsh-highlighter"
readme = "README.md"
keywords = ["zsh", "syntax-highlighting", "shell"]
categories = ["command-line-utilities"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
